# backbone

./: CLAUDE.md  Cargo.toml  GIT_INTEGRATION.md  README.md  backbone.toml
.github/scripts/: ensure-binaries.sh
.github/workflows/: ci.yml
crates/acp-light-client/: Cargo.toml
crates/acp-light-client/src/: cache.rs  header_sync.rs  lib.rs  proof_client.rs  rpc.rs  types.rs  verify.rs
crates/defra-harness/: Cargo.toml
crates/defra-harness/src/: divergences.rs  fixtures.rs  identity.rs  lib.rs  p2p_helpers.rs  poll.rs  ports.rs  process.rs  run.rs  sse.rs  wasm_lens.rs
crates/defra-harness/src/client/: mod.rs
crates/defra-harness/src/cluster/: builder.rs  health.rs  mod.rs  runtime.rs
crates/defra-harness/src/node/: go_node.rs  mod.rs  running.rs  rust_node.rs
crates/defra-harness/src/observe/: log_tracker.rs  mod.rs  patterns.rs  state.rs
crates/defra-harness/src/sourcehub/: genesis.rs  identity.rs  mod.rs  node.rs
crates/defra-harness/tests/: sourcehub.rs
crates/defra-harness/tests/sourcehub/: compartments.rs  p2p_acp.rs  policy_lifecycle.rs  resilience.rs  smoke.rs
crates/hub-harness/: Cargo.toml
crates/hub-harness/src/: lib.rs
crates/hub-harness/src/cluster/: builder.rs  genesis.rs  keys.rs  mod.rs  node_config.rs  runtime.rs
crates/hub-harness/src/contracts/: mod.rs
crates/hub-harness/src/fault/: injector.rs  mod.rs
crates/hub-harness/src/observe/: mod.rs  rpc_poller.rs
crates/orbis-harness/: Cargo.toml
crates/orbis-harness/src/: fixture.rs  lib.rs
crates/orbis-harness/src/cli/: did.rs  events.rs  mod.rs  orbis.rs  sourcehub.rs  types.rs
crates/orbis-harness/src/defradb/: identity.rs  mod.rs  node.rs
crates/orbis-harness/src/ring/: builder.rs  health.rs  mod.rs  node.rs
crates/orbis-harness/src/sourcehub/: genesis.rs  mod.rs  node.rs
crates/orbis-harness/tests/: secret_lifecycle.rs  three_component_smoke.rs  xarchive_full_service_key.rs
crates/sourcehub-harness/: Cargo.toml
crates/sourcehub-harness/src/: genesis.rs  identity.rs  lib.rs  node.rs
crates/test-infra/: Cargo.toml
crates/test-infra/src/: binary.rs  lib.rs  log_tracker.rs  manifest.rs  ports.rs  process.rs  run.rs
docs/: agentic-governance.md  architecture.md  identity-management-ui.md
docs/superpowers/plans/: 2026-05-28-defra-harness-multiplier-and-ports.md
docs/superpowers/specs/: 2026-05-28-defra-harness-multiplier-and-ports-design.md
tests/: full_stack.rs  hub_light_client.rs
tests/support/: full_stack.rs  hubd.rs  mod.rs
