[package]
name = "defra-harness"
version = "0.1.0"
description = "DefraDB node manager, CLI client, and test fixtures"
edition.workspace = true
license.workspace = true

[dependencies]
test-infra = { path = "../test-infra" }
sourcehub-harness = { path = "../sourcehub-harness" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
eyre.workspace = true
regex.workspace = true
rand.workspace = true
libc.workspace = true
futures.workspace = true
paste = "1.0"
