[package]
name = "hub-harness"
version = "0.1.0"
description = "Hub.rs node manager, cluster builder, and observability"
edition.workspace = true
license.workspace = true

[dependencies]
test-infra = { path = "../test-infra" }

hub-client = { git = "https://github.com/sourcenetwork/hub.rs" }

commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-utils.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true

tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
eyre.workspace = true
regex.workspace = true
rand.workspace = true
hex.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"
