[package]
name = "orbis-harness"
version = "0.1.0"
description = "Orbis ring builder, DKG fixtures, and event subscriptions"
edition.workspace = true
license.workspace = true

[dependencies]
test-infra = { path = "../test-infra" }
sourcehub-harness = { path = "../sourcehub-harness" }
defra-harness = { path = "../defra-harness" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
eyre.workspace = true
rand.workspace = true
hex.workspace = true
futures.workspace = true

k256 = { version = "0.13", features = ["ecdsa"] }
bs58 = "0.5"
base64 = "0.22"
ed25519-dalek = "2"
tokio-tungstenite = "0.26"

[dev-dependencies]
crypto = { git = "https://github.com/sourcenetwork/orbis-rs", branch = "jack/integration-testing", default-features = false, features = ["bls12-381"] }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
